# pyvista

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  RELEASENOTES  pyproject.toml  pyvista.yml  requirements.txt  setup.py
data/ARCES/: ARCES.yml  ARCES_config.yml
data/ARCTIC/: ARCTIC.yml  ARCTIC_config.yml  ARCTIC_quad_config.yml  ARCTICquad.yml
data/DIS/: DIS_config.yml  DIS_hires_6400_waves.pkl  DIS_lowres_waves.pkl  DIS_traces.pkl
data/KOSMOS/: KOSMOS.yml  KOSMOS_red_waves.pkl  KOSMOS_traces.pkl
data/TM61/: TM61.yml  TM61_config.yml
data/TSPEC/: TSPEC_config.yml  TSPEC_traces.pkl  TSPEC_waves.pkl
data/dis/: dis_blue_lowres.pkl  dis_red_lowres.pkl
doc/: pyvista.ipynb  pyvista.pptx  stars.ipynb
doc/notebooks/: ARCES.ipynb  ARCTIC.ipynb  DIS.ipynb  EchelleSpectroscopy--ARCES.ipynb  KOSMOS CofI slitmask reduction.ipynb  KOSMOS slitmask reduction.ipynb  KOSMOS.ipynb  KOSMOS_rotation.ipynb  LongslitSpectroscopicReduction--KOSMOS.ipynb  SlitmaskAcquisition--KOSMOS.ipynb  SlitmaskSpectroscopicReduction--KOSMOS.ipynb  SlitmaskSpectroscopicReduction--KOSMOS_CofI.ipynb  TSPEC.ipynb  pyvista.ipynb  pyvista_spectra.ipynb  reduce.ipynb  slitmask.ipynb  stars.ipynb
doc/source/: arces.txt  bitmask.txt  conf.py  data.txt  etc.txt  image.txt  imred.txt  index.txt  installation.txt  reduce.txt  simulate.txt  skycalc.txt  slitmask.txt  spectra.txt  stars.txt  tv.txt
input/: test.yml
python/pyvista/: apo_inst.py  apogee.py  bitmask.py  boss.py  centroid.py  dataclass.py  etc.py  gaia.py  image.py  imred.py  look.py  mmm.py  reduce.py  refcorr.py  sdss.py  simulate.py  skycalc.py  slitmask.py  spectra.py  stars.py  tv.py  utils.py
python/pyvista/data/APOGEE/: APOGEE.yml  APOGEE_trace.fits
python/pyvista/data/APOGEES/: APOGEES.yml
python/pyvista/data/ARCES/: ARCES.yml  ARCES_traces.fits  ARCES_traces.pkl  ARCES_wave.fits
python/pyvista/data/ARCTIC/: ARCTIC.yml  ARCTICquad.yml
python/pyvista/data/BOSS/: BOSS.yml  BOSS_b.fits  BOSS_b1_trace.fit  BOSS_b1_waves.fits  BOSS_b2_trace.fit  BOSS_b2_waves.fits  BOSS_b_waves.fits  BOSS_r.fits  BOSS_r1_trace.fit  BOSS_r1_waves.fits  BOSS_r2_trace.fit  BOSS_r2_waves.fits  boss.txt
python/pyvista/data/DIS/: DIS.yml  DIS_blue_trace.fits  (+3 more)
(+57 files in other folders)
